# argus-catalog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  VERSIONING.md
agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/argus_agent/: __init__.py  __main__.py  assistant.py  catalog.py  cli.py  config.py  llm.py  prompts.py  server.py  tasks.py  telemetry.py  tools.py
backend/: Makefile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: models.py  router.py  schemas.py  service.py
backend/app/ai/: __init__.py  base.py  models.py  prompts.py  registry.py  router.py  schemas.py  service.py
backend/app/ai/providers/: anthropic.py  ollama.py  (+1 more)
backend/app/alert/: models.py  router.py  schemas.py  service.py
backend/app/apis/: crypto.py  diff.py  lint.py  models.py  openapi_parser.py  router.py  schemas.py  service.py
backend/app/auth/: router.py
backend/app/catalog/: datasource_metadata.py  erd.py  impala_profile_router.py  lineage_resolve.py  models.py  relationship_service.py  router.py  schemas.py  service.py  sync.py  taxonomy_router.py  taxonomy_service.py  topology_router.py  topology_service.py
backend/app/change_mgmt/: __init__.py  activities.py  models.py  router.py  schemas.py  service.py  temporal_client.py  worker.py  workflow.py
backend/app/comments/: models.py  router.py  schemas.py  service.py
backend/app/core/: auth.py  config.py  config_loader.py  database.py  logging.py  password_gate.py  s3.py  security.py
backend/app/embedding/: base.py  models.py  registry.py  service.py
backend/app/federation/: README.md  __init__.py  auth.py  breaker.py  capabilities.py  client.py  export_router.py  harvester.py  models.py  router.py  samples.py  scheduler.py  schemas.py  service.py  visibility.py
backend/app/filesystemmgr/: router.py  schemas.py  service.py
backend/app/models/: download_log.py  model_store.py  models.py  router.py  schemas.py  service.py  store_router.py  uc_compat.py
backend/app/oci_hub/: download_log.py  models.py  router.py  schemas.py  service.py
backend/app/permissions/: __init__.py  models.py  router.py
backend/app/quality/: models.py  router.py  scheduler.py  schemas.py  service.py
backend/app/search/: router.py  schemas.py  service.py
backend/app/settings/: mail.py  models.py  notify.py  router.py  service.py
backend/app/standard/: models.py  router.py  schemas.py  service.py
backend/app/usermgr/: __init__.py  models.py  router.py  schemas.py  service.py
backend/deploy/temporal/: docker-compose.yml
backend/packaging/config/: argus-catalog-mariadb.sql  argus-catalog-postgresql.sql  argus-catalog-seed-ai.sql  argus-catalog-seed-api.sql  argus-catalog-seed-demo.sql  argus-catalog-seed-sakila.sql  config.properties  config.yml
backend/scripts/: export_training_data.py  finetune.py  merge_and_convert.py  seed_catalog_models.py  seed_metrics_test_data.py  seed_sakila_samples.py
backend/tests/: test_agents.py  test_change_mgmt_e2e.py  test_federation.py  test_federation_browse.py  test_federation_capabilities.py  test_federation_drilldown.py  test_federation_harvest.py  test_federation_lineage.py  test_federation_resilience.py  test_federation_stats.py
tests/: Makefile  conftest.py  pyproject.toml
tests/lib/: __init__.py  argus_client.py  assertions.py  compose.py  sync_client.py
(+295 files in other folders)
