# Argus Metadata Agent — 표준 라이브러리만 사용하므로 런타임 의존성이 없다.
[project]
name = "argus-agent"
version = "0.1.1"
description = "Argus Catalog 메타데이터 생성 에이전트 (LLM 기반, 독립 실행)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
argus-agent = "argus_agent.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["argus_agent"]
