[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-catalog-server"
# 버전 단일 소스: app/__init__.py 의 __version__ 에서 동적으로 가져온다.
dynamic = ["version"]
description = "Argus Catalog Server - Catalog Management Server"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3.0",
    "aiosqlite>=0.20",
]

[project.scripts]
argus-catalog-server = "app.main:run"

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# E501(라인 길이)은 ruff formatter 가 코드 길이를 관리하고, 남는 위반은 대부분
# 한국어 주석/문자열이라 무시한다(ruff 공식 권고). E741(모호한 변수명)은 스타일 선호로 비활성화.
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]              # 미들웨어 등록 후 라우터 import (의도적 지연 import)
"app/catalog/service.py" = ["E402"]  # 파일 중간의 의도적 지연 import
"app/comments/service.py" = ["E712"] # SQLAlchemy boolean 컬럼 비교(== False)는 SQL 생성에 필요

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
