[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-catalog-tests"
version = "0.1.1"
description = "End-to-end integration tests for Argus Catalog metadata sync adapters"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyiceberg[pyarrow]>=0.7",
    "pyarrow>=15.0",
    "boto3>=1.34",
    "pymysql>=1.1",
    "hmsclient>=0.1",
    "trino>=0.327",
    "oracledb>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]
# native libkudu_client 가 시스템에 있을 때만 설치 가능. 없으면 conftest 가 skip 처리.
kudu = [
    "kudu-python>=1.17.0",
]

[tool.pytest.ini_options]
testpaths = ["platforms", "scenarios"]
markers = [
    "iceberg: Iceberg REST Catalog integration tests",
    "postgresql: PostgreSQL integration tests",
    "mysql: MySQL/MariaDB integration tests",
    "hive: Hive integration tests",
    "trino: Trino integration tests",
    "oracle: Oracle integration tests",
    "starrocks: StarRocks integration tests",
    "impala: Impala integration tests",
    "kudu: Kudu integration tests",
    "slow: Long-running tests (>30s)",
]
addopts = "-ra --strict-markers"
timeout = 300

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "platforms*", "scenarios*"]
